# PathOfBuilding-Mac

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  MACOS_PORT.md  NOTES.md  README.md  UPSTREAM_NOTES.md
.github/workflows/: build-macos.yml  release-macos.yml
macos/: AppIcon.icns  Info.plist.in  entitlements.plist  launcher.c  launcher.cpp  mac_entry.lua  make-dmg.sh  notarize.sh  sign.sh
vcpkg-triplets/: arm64-osx-pob.cmake
